src/maths_parser.output
Terminals unused in grammar

    TYPE_NAME
    HELLO_WORLD


State 37 conflicts: 1 reduce/reduce
State 334 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: translation_unit
    2     | function_definition

    3 primary_expression: IDENTIFIER
    4                   | CONSTANT
    5                   | STRING_LITERAL
    6                   | '(' expression ')'

    7 postfix_expression: primary_expression
    8                   | postfix_expression '[' expression ']'
    9                   | postfix_expression '(' ')'
   10                   | postfix_expression '(' argument_expression_list ')'
   11                   | postfix_expression '.' IDENTIFIER
   12                   | postfix_expression PTR_OP IDENTIFIER
   13                   | postfix_expression INC_OP
   14                   | postfix_expression DEC_OP

   15 argument_expression_list: assignment_expression
   16                         | argument_expression_list ',' assignment_expression

   17 unary_expression: postfix_expression
   18                 | INC_OP unary_expression
   19                 | DEC_OP unary_expression
   20                 | unary_operator cast_expression
   21                 | SIZEOF unary_expression
   22                 | SIZEOF '(' type_name ')'

   23 unary_operator: '&'
   24               | '*'
   25               | '+'
   26               | '-'
   27               | '~'
   28               | '!'

   29 cast_expression: unary_expression
   30                | '(' type_name ')' cast_expression

   31 multiplicative_expression: cast_expression
   32                          | multiplicative_expression '*' cast_expression
   33                          | multiplicative_expression '/' cast_expression
   34                          | multiplicative_expression '%' cast_expression

   35 additive_expression: multiplicative_expression
   36                    | additive_expression '+' multiplicative_expression
   37                    | additive_expression '-' multiplicative_expression

   38 shift_expression: additive_expression
   39                 | shift_expression LEFT_OP additive_expression
   40                 | shift_expression RIGHT_OP additive_expression

   41 relational_expression: shift_expression
   42                      | relational_expression '<' shift_expression
   43                      | relational_expression '>' shift_expression
   44                      | relational_expression LE_OP shift_expression
   45                      | relational_expression GE_OP shift_expression

   46 equality_expression: relational_expression
   47                    | equality_expression EQ_OP relational_expression
   48                    | equality_expression NE_OP relational_expression

   49 and_expression: equality_expression
   50               | and_expression '&' equality_expression

   51 exclusive_or_expression: and_expression
   52                        | exclusive_or_expression '^' and_expression

   53 inclusive_or_expression: exclusive_or_expression
   54                        | inclusive_or_expression '|' exclusive_or_expression

   55 logical_and_expression: inclusive_or_expression
   56                       | logical_and_expression AND_OP inclusive_or_expression

   57 logical_or_expression: logical_and_expression
   58                      | logical_or_expression OR_OP logical_and_expression

   59 conditional_expression: logical_or_expression
   60                       | logical_or_expression '?' expression ':' conditional_expression

   61 assignment_expression: conditional_expression
   62                      | unary_expression assignment_operator assignment_expression

   63 assignment_operator: '='
   64                    | MUL_ASSIGN
   65                    | DIV_ASSIGN
   66                    | MOD_ASSIGN
   67                    | ADD_ASSIGN
   68                    | SUB_ASSIGN
   69                    | LEFT_ASSIGN
   70                    | RIGHT_ASSIGN
   71                    | AND_ASSIGN
   72                    | XOR_ASSIGN
   73                    | OR_ASSIGN

   74 expression: assignment_expression
   75           | expression ',' assignment_expression

   76 constant_expression: conditional_expression

   77 declaration: declaration_specifiers ';'
   78            | declaration_specifiers init_declarator_list ';'

   79 declaration_specifiers: storage_class_specifier
   80                       | storage_class_specifier declaration_specifiers
   81                       | type_specifier
   82                       | type_specifier declaration_specifiers
   83                       | type_qualifier
   84                       | type_qualifier declaration_specifiers

   85 init_declarator_list: init_declarator
   86                     | init_declarator_list ',' init_declarator

   87 init_declarator: declarator
   88                | declarator '=' initializer

   89 storage_class_specifier: TYPEDEF
   90                        | EXTERN
   91                        | STATIC
   92                        | AUTO
   93                        | REGISTER

   94 type_specifier: VOID
   95               | CHAR
   96               | SHORT
   97               | INT
   98               | LONG
   99               | FLOAT
  100               | DOUBLE
  101               | SIGNED
  102               | UNSIGNED
  103               | struct_or_union_specifier
  104               | enum_specifier

  105 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  106                          | struct_or_union '{' struct_declaration_list '}'
  107                          | struct_or_union IDENTIFIER

  108 struct_or_union: STRUCT
  109                | UNION

  110 struct_declaration_list: struct_declaration
  111                        | struct_declaration_list struct_declaration

  112 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  113 specifier_qualifier_list: type_specifier specifier_qualifier_list
  114                         | type_specifier
  115                         | type_qualifier specifier_qualifier_list
  116                         | type_qualifier

  117 struct_declarator_list: struct_declarator
  118                       | struct_declarator_list ',' struct_declarator

  119 struct_declarator: declarator
  120                  | ':' constant_expression
  121                  | declarator ':' constant_expression

  122 enum_specifier: ENUM '{' enumerator_list '}'
  123               | ENUM IDENTIFIER '{' enumerator_list '}'
  124               | ENUM IDENTIFIER

  125 enumerator_list: enumerator
  126                | enumerator_list ',' enumerator

  127 enumerator: IDENTIFIER
  128           | IDENTIFIER '=' constant_expression

  129 type_qualifier: CONST
  130               | VOLATILE

  131 declarator: pointer direct_declarator
  132           | direct_declarator

  133 direct_declarator: IDENTIFIER
  134                  | '(' declarator ')'
  135                  | direct_declarator '[' constant_expression ']'
  136                  | direct_declarator '[' ']'
  137                  | direct_declarator '(' parameter_type_list ')'
  138                  | direct_declarator '(' identifier_list ')'
  139                  | direct_declarator '(' ')'

  140 pointer: '*'
  141        | '*' type_qualifier_list
  142        | '*' pointer
  143        | '*' type_qualifier_list pointer

  144 type_qualifier_list: type_qualifier
  145                    | type_qualifier_list type_qualifier

  146 parameter_type_list: parameter_list
  147                    | parameter_list ',' ELLIPSIS

  148 parameter_list: parameter_declaration
  149               | parameter_list ',' parameter_declaration

  150 parameter_declaration: declaration_specifiers declarator
  151                      | declaration_specifiers abstract_declarator
  152                      | declaration_specifiers

  153 identifier_list: IDENTIFIER
  154                | identifier_list ',' IDENTIFIER

  155 type_name: specifier_qualifier_list
  156          | specifier_qualifier_list abstract_declarator

  157 abstract_declarator: pointer
  158                    | direct_abstract_declarator
  159                    | pointer direct_abstract_declarator

  160 direct_abstract_declarator: '(' abstract_declarator ')'
  161                           | '[' ']'
  162                           | '[' constant_expression ']'
  163                           | direct_abstract_declarator '[' ']'
  164                           | direct_abstract_declarator '[' constant_expression ']'
  165                           | '(' ')'
  166                           | '(' parameter_type_list ')'
  167                           | direct_abstract_declarator '(' ')'
  168                           | direct_abstract_declarator '(' parameter_type_list ')'

  169 initializer: assignment_expression
  170            | '{' initializer_list '}'
  171            | '{' initializer_list ',' '}'

  172 initializer_list: initializer
  173                 | initializer_list ',' initializer

  174 statement: labeled_statement
  175          | compound_statement
  176          | expression_statement
  177          | selection_statement
  178          | iteration_statement
  179          | jump_statement

  180 labeled_statement: IDENTIFIER ':' statement
  181                  | CASE constant_expression ':' statement
  182                  | DEFAULT ':' statement

  183 compound_statement: '{' '}'
  184                   | '{' statement_list '}'
  185                   | '{' declaration_list '}'
  186                   | '{' declaration_list statement_list '}'

  187 declaration_list: declaration
  188                 | declaration_list declaration

  189 statement_list: statement
  190               | statement statement_list

  191 expression_statement: ';'
  192                     | expression ';'

  193 selection_statement: IF '(' expression ')' statement
  194                    | IF '(' expression ')' statement ELSE statement
  195                    | SWITCH '(' expression ')' statement

  196 iteration_statement: WHILE '(' expression ')' statement
  197                    | DO statement WHILE '(' expression ')' ';'
  198                    | FOR '(' expression_statement expression_statement ')' statement
  199                    | FOR '(' expression_statement expression_statement expression ')' statement

  200 jump_statement: GOTO IDENTIFIER ';'
  201               | CONTINUE ';'
  202               | BREAK ';'
  203               | RETURN ';'
  204               | RETURN expression ';'

  205 translation_unit: external_declaration
  206                 | translation_unit external_declaration

  207 external_declaration: function_definition
  208                     | declaration

  209 function_definition: declaration_specifiers declarator declaration_list compound_statement
  210                    | declaration_specifiers declarator compound_statement
  211                    | declarator declaration_list compound_statement
  212                    | declarator compound_statement


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 28
    '%' (37) 34
    '&' (38) 23 50
    '(' (40) 6 9 10 22 30 134 137 138 139 160 165 166 167 168 193 194 195 196 197 198 199
    ')' (41) 6 9 10 22 30 134 137 138 139 160 165 166 167 168 193 194 195 196 197 198 199
    '*' (42) 24 32 140 141 142 143
    '+' (43) 25 36
    ',' (44) 16 75 86 118 126 147 149 154 171 173
    '-' (45) 26 37
    '.' (46) 11
    '/' (47) 33
    ':' (58) 60 120 121 180 181 182
    ';' (59) 77 78 112 191 192 197 200 201 202 203 204
    '<' (60) 42
    '=' (61) 63 88 128
    '>' (62) 43
    '?' (63) 60
    '[' (91) 8 135 136 161 162 163 164
    ']' (93) 8 135 136 161 162 163 164
    '^' (94) 52
    '{' (123) 105 106 122 123 170 171 183 184 185 186
    '|' (124) 54
    '}' (125) 105 106 122 123 170 171 183 184 185 186
    '~' (126) 27
    error (256)
    CONSTANT <number> (258) 4
    IDENTIFIER <string> (259) 3 11 12 105 107 123 124 127 128 133 153 154 180 200
    STRING_LITERAL <string> (260) 5
    SIZEOF (261) 21 22
    PTR_OP (262) 12
    INC_OP (263) 13 18
    DEC_OP (264) 14 19
    LEFT_OP (265) 39
    RIGHT_OP (266) 40
    LE_OP (267) 44
    GE_OP (268) 45
    EQ_OP (269) 47
    NE_OP (270) 48
    AND_OP (271) 56
    OR_OP (272) 58
    MUL_ASSIGN (273) 64
    DIV_ASSIGN (274) 65
    MOD_ASSIGN (275) 66
    ADD_ASSIGN (276) 67
    SUB_ASSIGN (277) 68
    LEFT_ASSIGN (278) 69
    RIGHT_ASSIGN (279) 70
    AND_ASSIGN (280) 71
    XOR_ASSIGN (281) 72
    OR_ASSIGN (282) 73
    TYPE_NAME (283)
    TYPEDEF (284) 89
    EXTERN (285) 90
    STATIC (286) 91
    AUTO (287) 92
    REGISTER (288) 93
    CHAR (289) 95
    SHORT (290) 96
    INT (291) 97
    LONG (292) 98
    SIGNED (293) 101
    UNSIGNED (294) 102
    FLOAT (295) 99
    DOUBLE (296) 100
    CONST (297) 129
    VOLATILE (298) 130
    VOID (299) 94
    STRUCT (300) 108
    UNION (301) 109
    ENUM (302) 122 123 124
    ELLIPSIS (303) 147
    CASE (304) 181
    DEFAULT (305) 182
    IF (306) 193 194
    ELSE (307) 194
    SWITCH (308) 195
    WHILE (309) 196 197
    DO (310) 197
    FOR (311) 198 199
    GOTO (312) 200
    CONTINUE (313) 201
    BREAK (314) 202
    RETURN (315) 203 204
    HELLO_WORLD (316)


Nonterminals, with rules where they appear

    $accept (86)
        on left: 0
    ROOT <tree> (87)
        on left: 1 2
        on right: 0
    primary_expression <tree> (88)
        on left: 3 4 5 6
        on right: 7
    postfix_expression <tree> (89)
        on left: 7 8 9 10 11 12 13 14
        on right: 8 9 10 11 12 13 14 17
    argument_expression_list <tree> (90)
        on left: 15 16
        on right: 10 16
    unary_expression <tree> (91)
        on left: 17 18 19 20 21 22
        on right: 18 19 21 29 62
    unary_operator <tree> (92)
        on left: 23 24 25 26 27 28
        on right: 20
    cast_expression <tree> (93)
        on left: 29 30
        on right: 20 30 31 32 33 34
    multiplicative_expression <tree> (94)
        on left: 31 32 33 34
        on right: 32 33 34 35 36 37
    additive_expression <tree> (95)
        on left: 35 36 37
        on right: 36 37 38 39 40
    shift_expression <tree> (96)
        on left: 38 39 40
        on right: 39 40 41 42 43 44 45
    relational_expression <tree> (97)
        on left: 41 42 43 44 45
        on right: 42 43 44 45 46 47 48
    equality_expression <tree> (98)
        on left: 46 47 48
        on right: 47 48 49 50
    and_expression <tree> (99)
        on left: 49 50
        on right: 50 51 52
    exclusive_or_expression <tree> (100)
        on left: 51 52
        on right: 52 53 54
    inclusive_or_expression <tree> (101)
        on left: 53 54
        on right: 54 55 56
    logical_and_expression <tree> (102)
        on left: 55 56
        on right: 56 57 58
    logical_or_expression <tree> (103)
        on left: 57 58
        on right: 58 59 60
    conditional_expression <tree> (104)
        on left: 59 60
        on right: 60 61 76
    assignment_expression <tree> (105)
        on left: 61 62
        on right: 15 16 62 74 75 169
    assignment_operator (106)
        on left: 63 64 65 66 67 68 69 70 71 72 73
        on right: 62
    expression <tree> (107)
        on left: 74 75
        on right: 6 8 60 75 192 193 194 195 196 197 199 204
    constant_expression <tree> (108)
        on left: 76
        on right: 120 121 128 135 162 164 181
    declaration <tree> (109)
        on left: 77 78
        on right: 187 188 208
    declaration_specifiers <tree> (110)
        on left: 79 80 81 82 83 84
        on right: 77 78 80 82 84 150 151 152 209 210
    init_declarator_list <tree> (111)
        on left: 85 86
        on right: 78 86
    init_declarator <tree> (112)
        on left: 87 88
        on right: 85 86
    storage_class_specifier <tree> (113)
        on left: 89 90 91 92 93
        on right: 79 80
    type_specifier <tree> (114)
        on left: 94 95 96 97 98 99 100 101 102 103 104
        on right: 81 82 113 114
    struct_or_union_specifier <tree> (115)
        on left: 105 106 107
        on right: 103
    struct_or_union <tree> (116)
        on left: 108 109
        on right: 105 106 107
    struct_declaration_list <tree> (117)
        on left: 110 111
        on right: 105 106 111
    struct_declaration <tree> (118)
        on left: 112
        on right: 110 111
    specifier_qualifier_list <tree> (119)
        on left: 113 114 115 116
        on right: 112 113 115 155 156
    struct_declarator_list <tree> (120)
        on left: 117 118
        on right: 112 118
    struct_declarator <tree> (121)
        on left: 119 120 121
        on right: 117 118
    enum_specifier <tree> (122)
        on left: 122 123 124
        on right: 104
    enumerator_list <tree> (123)
        on left: 125 126
        on right: 122 123 126
    enumerator <tree> (124)
        on left: 127 128
        on right: 125 126
    type_qualifier <tree> (125)
        on left: 129 130
        on right: 83 84 115 116 144 145
    declarator <tree> (126)
        on left: 131 132
        on right: 87 88 119 121 134 150 209 210 211 212
    direct_declarator <tree> (127)
        on left: 133 134 135 136 137 138 139
        on right: 131 132 135 136 137 138 139
    pointer (128)
        on left: 140 141 142 143
        on right: 131 142 143 157 159
    type_qualifier_list (129)
        on left: 144 145
        on right: 141 143 145
    parameter_type_list <tree> (130)
        on left: 146 147
        on right: 137 166 168
    parameter_list (131)
        on left: 148 149
        on right: 146 147 149
    parameter_declaration <tree> (132)
        on left: 150 151 152
        on right: 148 149
    identifier_list <tree> (133)
        on left: 153 154
        on right: 138 154
    type_name <tree> (134)
        on left: 155 156
        on right: 22 30
    abstract_declarator <tree> (135)
        on left: 157 158 159
        on right: 151 156 160
    direct_abstract_declarator <tree> (136)
        on left: 160 161 162 163 164 165 166 167 168
        on right: 158 159 163 164 167 168
    initializer <tree> (137)
        on left: 169 170 171
        on right: 88 172 173
    initializer_list (138)
        on left: 172 173
        on right: 170 171 173
    statement <tree> (139)
        on left: 174 175 176 177 178 179
        on right: 180 181 182 189 190 193 194 195 196 197 198 199
    labeled_statement <tree> (140)
        on left: 180 181 182
        on right: 174
    compound_statement <tree> (141)
        on left: 183 184 185 186
        on right: 175 209 210 211 212
    declaration_list <tree> (142)
        on left: 187 188
        on right: 185 186 188 209 211
    statement_list <tree> (143)
        on left: 189 190
        on right: 184 186 190
    expression_statement <tree> (144)
        on left: 191 192
        on right: 176 198 199
    selection_statement <tree> (145)
        on left: 193 194 195
        on right: 177
    iteration_statement <tree> (146)
        on left: 196 197 198 199
        on right: 178
    jump_statement <tree> (147)
        on left: 200 201 202 203 204
        on right: 179
    translation_unit <tree> (148)
        on left: 205 206
        on right: 1 206
    external_declaration <tree> (149)
        on left: 207 208
        on right: 205 206
    function_definition <tree> (150)
        on left: 209 210 211 212
        on right: 2 207


State 0

    0 $accept: • ROOT $end

    IDENTIFIER  shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    STATIC      shift, and go to state 4
    AUTO        shift, and go to state 5
    REGISTER    shift, and go to state 6
    CHAR        shift, and go to state 7
    SHORT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SIGNED      shift, and go to state 11
    UNSIGNED    shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    CONST       shift, and go to state 15
    VOLATILE    shift, and go to state 16
    VOID        shift, and go to state 17
    STRUCT      shift, and go to state 18
    UNION       shift, and go to state 19
    ENUM        shift, and go to state 20
    '('         shift, and go to state 21
    '*'         shift, and go to state 22

    ROOT                       go to state 23
    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    declarator                 go to state 32
    direct_declarator          go to state 33
    pointer                    go to state 34
    translation_unit           go to state 35
    external_declaration       go to state 36
    function_definition        go to state 37


State 1

  133 direct_declarator: IDENTIFIER •

    $default  reduce using rule 133 (direct_declarator)


State 2

   89 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 89 (storage_class_specifier)


State 3

   90 storage_class_specifier: EXTERN •

    $default  reduce using rule 90 (storage_class_specifier)


State 4

   91 storage_class_specifier: STATIC •

    $default  reduce using rule 91 (storage_class_specifier)


State 5

   92 storage_class_specifier: AUTO •

    $default  reduce using rule 92 (storage_class_specifier)


State 6

   93 storage_class_specifier: REGISTER •

    $default  reduce using rule 93 (storage_class_specifier)


State 7

   95 type_specifier: CHAR •

    $default  reduce using rule 95 (type_specifier)


State 8

   96 type_specifier: SHORT •

    $default  reduce using rule 96 (type_specifier)


State 9
